--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -22,8 +22,77 @@ body {
   background-color: var(--app-dark-bg);
   display: grid;
   place-items: center;
+  position: relative;
 }
 
 h1 {
-  color: #33ab4e;
+  color: var(--app-orange);
+}
+
+h1 + h1 {
+  margin-left: 25px;
+}
+
+.star-container {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.dialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 150px;
+  width: 400px;
+  border-radius: 10px;
+  background-color: var(--app-white);
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.dialog p {
+  font-size: 25px;
+  font-weight: 800;
+}
+
+.dialog-btn {
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  height: 40px;
+  width: 150px;
+  padding: 0 10px;
+  background-color: var(--app-blue);
+  color: var(--app-white);
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.dialog-btn:hover {
+  background-color: var(--app-blue-hover);
+}
+
+.remove-dlg {
+  position: absolute;
+  top: 1px;
+  right: 10px;
+  background: none;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 40px;
+}
+
+.ratings {
+  color: var(--app-white);
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
 }
