--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -52,6 +52,7 @@ h1 + h1 {
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  transition: all 0.3s ease-in-out;
 }
 
 .dialog p {
@@ -95,4 +96,14 @@ h1 + h1 {
   font-size: 30px;
   font-weight: 600;
   text-align: center;
+}
+
+.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
 }
